--- a/NINA.Plugin.LogViewer.csproj
+++ b/NINA.Plugin.LogViewer.csproj
@@ -19,7 +19,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NINA.Plugin" Version="3.1.2.9001" />
-    <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
+    <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1">
+      <GeneratePathProperty>False</GeneratePathProperty>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\LogViewer_Logo.png">
