--- a/.github/workflows/github-action.yaml
+++ b/.github/workflows/github-action.yaml
@@ -19,13 +19,13 @@ permissions:
 
 env:
   # Adjust this to your plugin title
-  PLUGIN_NAME: "My Plugin Name"
+  PLUGIN_NAME: "Log Viewer"
   # Your solution name
-  PLUGIN_SLN_NAME: "MyPlugin"
+  PLUGIN_SLN_NAME: "NINA.Plugin.LogViewer.sln"
   # The name of the resulting dll file
-  PLUGIN_DLL_NAME: "NINA.Plugins.MyPlugin"
+  PLUGIN_DLL_NAME: "Log Viewer"
   # The relative path to your manifest folder inside the manifest repository
-  PLUGIN_MANIFEST_PATH: "m/MyPlugin"
+  PLUGIN_MANIFEST_PATH: "l/Log Viewer"
 
 jobs:
   build-and-release:
